--- a/index.css
+++ b/index.css
@@ -1,27 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border-radius: 2%;
+}
+
 body {
     background-color: #439b9d;
+    font-family: 'Source Sans Pro', sans-serif;
 }
   
 header {
     text-align: center;
 }
 
-h1 {
-    font-size: 40px;
-}
-  
-  
+
 header li {
     display: inline-block;
     margin: 1em;
     list-style: none;
-    font-size: 24px;
+    font-size: 1.3em;
+}
+
+.images {
+    margin-bottom: 0.5em;
+    
+    max-width: 240px;   
 }
   
 .ocean {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-self: center;
     margin-top: 3em;
     margin-left: auto;
     margin-right: auto;
@@ -41,30 +53,39 @@ header li {
     background-color: #439b9d;
    
 }
-  
-  
-.images {
+
+label {
+    display: block;
     margin-bottom: 0.5em;
-    width: 90%;
-    max-width: 240px;
+    padding: 0.5em;
+    cursor: pointer;
 }
-  
-.answerOption {
-    margin-top: 0.5em;
+
+h3, legend {
+    margin-bottom: 0.5em;
 }
+ 
   
 .button {
-    margin-top: 0.5em;
-    font-size: 1em;
-    width: 8em;
-    height: 2.5em;
+    margin-left: auto;
+    margin-right: auto;
+    height: 3em;
+    cursor: pointer;
+    font-family: 'Source Sans Pro', sans-serif;
+    border: 0.1em;
+    background-color: rgb(17, 57, 95);
+    color: white;
+}
+
+fieldset {
+    border-style: none;
 }
   
 .final {
     display: block;
 }
   
-@media only screen and (min-width: 320px) {
+    @media only screen and (min-width: 320px) {
 
   
 .ocean {
@@ -77,16 +98,95 @@ header li {
 }
   
 .box {
-    width: 90%;
+    width: 85%;
     height: 90%;
 }
 
+.images {
+    width: 85%;
+}
+
+.header li {
+    font-size: 1.5em;
+  }
 
 .sizeMe {
-    font-size: 22px;
+    font-size: 1.1em;
     margin: 0.1em;
 }
 }
+
+.button {
+    margin-top: 0.5em;
+    font-size: 1em;
+    width: 8em;
+    height: 2.5em;
+}
+
+legend {
+    font-size: 1.2em;
+}
+
+  @media only screen and (min-width: 550px) {
+.ocean {
+    width: 29.5em;
+    height: 31.5em;
+    padding-top: 2.6em;
+    padding-bottom: 2.6em;
+}
+
+.box {
+    width: 85%;
+    height: 98%;
+}
+    
+.button {
+    margin-top: 1em;
+    font-size: 1em;
+    width: 10em;
+    height: 2.5em;
+}
+    
+
+h3, legend {
+    font-size: 1.2em;
+}
+
+.sizeMe {
+    font-size: 1.1em;
+}
+    }
+
+    @media only screen and (min-width: 800px) {  
+.header li {
+    margin: 1em;
+    font-size: 1.3em;
+}
   
+.ocean {
+    width: 35em;
+    height: 38em;
+}
+  
+.box {
+    width: 85%;
+    height: 95%;
+}
+  
+h3, legend {
+    font-size: 1.3em;
+}
+  
+.sizeMe {
+    font-size: 1.2em;
+}
+  
+.button {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 12em;
+    font-size: 1.2em;
+}
+  }
 
   
